# yo

./: .gitignore  README.md  SERVER_API.md  build.bat  email_usage.txt  welink_monitor.py  welink_readme.txt  经验引擎接口.txt
.claude/: settings.local.json
Installer/: setup.iss
OutlookEmailForwarder/: AddinModule.cs  OutlookEmailForwarder.csproj  OutlookEmailForwarder.sln
OutlookEmailForwarder/Forms/: ConfigForm.cs  MainForm.cs  RuleEditForm.cs
OutlookEmailForwarder/Models/: AppConfig.cs  EmailPayload.cs  ForwardRule.cs
OutlookEmailForwarder/Properties/: AssemblyInfo.cs
backend/: app.py  email_forwarder.db  start.bat
pyqt_client/: .email_assistant.json  .gitignore  PYWEBVIEW.md  backend.py  build.bat  build.py  cli.py  desktop_host.py  dialogs.py  log_config.py  main.py  paths.py  pywebview.spec  requirements.txt  runtime.py  shell.py  store.py  utils.py  version.py  webview_api.py
pyqt_client/modules/: ui.py  (+1 more)
server/: __main__.py  requirements.txt  start.bat  test_toolcall.py
stand_alone/: README.md  run_offline_client.bat
standalone/: .gitignore  DESIGN.md  README.md  build_all.bat  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json
standalone/src-tauri/: Cargo.toml  tauri.conf.json
standalone/src-tauri/capabilities/: default.json
standalone/src-tauri/src/: commands.rs  events.rs  htmlmd.rs  images.rs  imported.rs  lib.rs  main.rs  output.rs  settings.rs  sidecar.rs  store.rs  sync.rs
standalone/src-tauri/src/email/: mod.rs
standalone/src-tauri/src/welink/: chatlog.rs  cli.rs  collect.rs  image.rs  mod.rs  render.rs
(+114 files in other folders)
