[package]
name = "email-welink-standalone"
version = "0.1.0"
description = "邮件 / WeLink 单机助手"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
# 仅桌面 Windows：只需 rlib（bin 链接它）。
# staticlib/cdylib 是移动端入口，在 GNU/mingw 工具链下构建会触发
# "export ordinal too large" 链接错误，且桌面用不到。
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
htmd = "0.1"
anyhow = "1"
thiserror = "2"
log = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
